# clawbench

./: .crabbox.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAWBENCH_V0_4_SPEC.md  CONTRIBUTING.md  Dockerfile  Dockerfile.clawbench-426-agent-hotfix  Dockerfile.fair  Dockerfile.gbrain  Dockerfile.main  Dockerfile.openclaw-426-agent-hotfix  Dockerfile.pr68627  Dockerfile.user-fix  PARTNER_TRACE_SPEC.md  README.md  SPACE_README.md  app.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
clawbench/: ablation.py  cli.py  client.py  diagnostic.py  dynamics.py  dynamics_archive.py  environment.py  environment_files.py  factor_analysis.py  harness.py  insights.py  judge.py  paths.py  queue.py  recommendations.py  releases.py  render.py  schemas.py  scorer.py  services.py  tasks.py  trajectory.py  upload.py  utilization.py  worker.py
docs/: DOMAIN_PROOF_PLAN.md  MEETING_BRIEF_NVIDIA_HF_VLLM_2026-04-24.md  kubernetes.md  long_term_dynamics.md  semantic_spatiotemporal_dynamics.md  task_distribution_reweighting.md
patches/: patch_openclaw_426_agent_create_queue.mjs  patch_openclaw_426_skip_eval_health_probes.mjs  patch_opus47.py  prestage_openclaw_426_eval_plugin_runtime_deps.mjs
profiles/: empirical_topic_distribution.json  frontier_deepseek_v4.yaml  frontier_gpt_5_2.yaml  frontier_gpt_5_5.yaml  frontier_kimi_k26.yaml  frontier_opus_4_7.yaml  frontier_sonnet_4_6.yaml  radon_nikodym_weights.json  user_target_distribution.json
scripts/: _archive_cache.sh  analyze_open_vs_closed.py  audit_per_run.py  audit_runs.py  capture_sse.sh  capture_sse_notoool.sh  cherrypick_rerun.sh  ci-hydrate-live-auth.sh  ci-hydrate-testbox-env.sh  classify_regimes.py  compute_debiased_dynamics.py  container_adapter_eval.sh  container_cherry_single.sh  container_lane_eval.sh  container_sweep.sh  container_sweep_lab.sh  container_sweep_nolab.sh  container_sweep_single.sh  debiased_evaluation.py  gapfill_rerun.sh  generate_drift_report.py  generate_dynamical_report.py  generate_perturbed_tasks.py  infra_log_gate.sh  ingest_real_run.py  inject_judge_rubrics.py  launch_userfix_sweep.sh  launch_userfix_v2_sweep.sh  multi_judge.py  (+21 more)
(+70 files in other folders)
